RESOLVED FIXED185097
REGRESSION: Touch events fail to dispatch to the page in all cases
https://bugs.webkit.org/show_bug.cgi?id=185097
Summary REGRESSION: Touch events fail to dispatch to the page in all cases
Timothy Hatcher
Reported 2018-04-27 16:36:40 PDT
Attachments
Patch (1.79 KB, patch)
2018-04-27 16:41 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2018-04-27 16:41:16 PDT
WebKit Commit Bot
Comment 2 2018-04-27 17:52:18 PDT
Comment on attachment 339039 [details] Patch Clearing flags on attachment: 339039 Committed r231126: <https://trac.webkit.org/changeset/231126>
WebKit Commit Bot
Comment 3 2018-04-27 17:52:19 PDT
All reviewed patches have been landed. Closing bug.
Lucas Forschler
Comment 4 2019-02-06 09:18:23 PST
Mass move bugs into the DOM component.
Note You need to log in before you can comment on or make changes to this bug.