REGRESSION: Touch events fail to dispatch to the page in all cases.

https://bugs.webkit.org/show_bug.cgi?id=185097
rdar://problem/39731995

Reviewed by Tim Horton.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView gestureRecognizer:shouldRecognizeSimultaneouslyWithGestureRecognizer:]):
Consult internal gesture recognizers, otherwise NO might get returned.


Canonical link: https://commits.webkit.org/200592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231126 268f45cc-cd09-0410-ab3c-d52691b4dbfc